--- a/zettadaten_fe/package.json
+++ b/zettadaten_fe/package.json
@@ -14,8 +14,13 @@
     "@emotion/styled": "^11.10.0",
     "@mui/icons-material": "^5.10.2",
     "@mui/material": "^5.10.2",
+    "@styled-icons/material": "^10.34.0",
     "axios": "^0.27.2",
     "next": "12.2.5",
+    "next-transpile-modules": "^9.0.0",
+    "nextjs-components": "^0.9.0",
+    "postcss-flexbugs-fixes": "^5.0.2",
+    "postcss-preset-env": "^7.8.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-scroll": "^1.8.7",
