--- a/zettadaten_fe/package.json
+++ b/zettadaten_fe/package.json
@@ -19,6 +19,8 @@
     "@styled-icons/material": "^10.34.0",
     "axios": "^0.27.2",
     "embla-carousel-react": "^7.0.1",
+    "flowbite": "^1.5.3",
+    "flowbite-react": "^0.1.10",
     "material-ui-popup-state": "^4.0.2",
     "next": "^12.2.5",
     "next-transpile-modules": "^9.0.0",
