--- a/zettadaten_fe_next17/package.json
+++ b/zettadaten_fe_next17/package.json
@@ -30,6 +30,7 @@
     "prop-types": "latest",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.4.0",
     "react-scripts": "^2.1.3",
     "tailwindcss": "latest",
     "web-vitals": "latest"
