--- a/zettadaten_fe_next17/package.json
+++ b/zettadaten_fe_next17/package.json
@@ -10,6 +10,7 @@
     "post-update": "echo \"codesandbox preview only, need an update\" && yarn upgrade --latest"
   },
   "dependencies": {
+    "@babel/plugin-syntax-jsx": "^7.18.6",
     "@emotion/cache": "latest",
     "@emotion/react": "latest",
     "@emotion/server": "latest",
@@ -32,11 +33,16 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
     "react-scripts": "^2.1.3",
+    "styled-components": "^5.3.5",
     "tailwindcss": "latest",
     "web-vitals": "latest"
   },
   "devDependencies": {
+    "@babel/preset-react": "^7.18.6",
     "eslint": "8.23.0",
     "eslint-config-next": "12.2.5"
+  },
+  "resolutions": {
+    "styled-components": "^5"
   }
 }
