--- a/zettadaten_fe_next17/package.json
+++ b/zettadaten_fe_next17/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@babel/plugin-syntax-jsx": "^7.18.6",
+    "@babel/preset-env": "^7.19.0",
     "@emotion/cache": "latest",
     "@emotion/react": "latest",
     "@emotion/server": "latest",
@@ -27,18 +28,25 @@
     "autoprefixer": "latest",
     "axios": "latest",
     "next": "12.2.5",
+    "next-redux-wrapper": "^7.0.5",
     "postcss": "latest",
     "prop-types": "latest",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
+    "react-redux": "^8.0.2",
     "react-scripts": "^2.1.3",
+    "redux": "^4.2.0",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.4.1",
     "styled-components": "^5.3.5",
     "tailwindcss": "latest",
+    "typescript": "^4.8.2",
     "web-vitals": "latest"
   },
   "devDependencies": {
     "@babel/preset-react": "^7.18.6",
+    "@emotion/babel-plugin": "^11.10.2",
     "eslint": "8.23.0",
     "eslint-config-next": "12.2.5"
   },
