modified:   package.json 	modified:   zettadaten_fe_next17/package.json

--- a/zettadaten_fe_next17/package.json
+++ b/zettadaten_fe_next17/package.json
@@ -66,5 +66,8 @@
   "bugs": {
     "url": "https://github.com/cadentic/strapi-webdev/issues"
   },
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com"
+  },
   "homepage": "https://github.com/cadentic/strapi-webdev"
 }
