--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
-{    "name": "next-nuxt-strapi-webdevelopment",
+{
+    "name": "@nuxt/strapi-webdev",
     "description": "Boilerplate with strapi and next laravel and nuxtjs",
-    "version": "1.0.1",
+    "version": "1.0.0",
+    "private": false,
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1"
     },
@@ -8,11 +10,21 @@
         "type": "git",
         "url": "https://github.com/cadentic/strapi-webdev.git"
     },
-    "keywords": ["framework","nuxtjs", "webdev", "laravel9","nextjs","strapi"],
-    "author": "appsdbaevaxp.sayantan@gmail.com",
+    "keywords": [
+        "framework",
+        "nuxtjs",
+        "webdev",
+        "laravel9",
+        "nextjs",
+        "strapi"
+    ],
+    "author": "info@cadentic.net.in",
     "license": "MIT",
     "bugs": {
         "url": "https://github.com/cadentic/strapi-webdev/issues"
+    },
+    "publishConfig": {
+        "registry": "https://npm.pkg.github.com/@cadentic"
     },
     "homepage": "https://github.com/cadentic/strapi-webdev"
 }
