modified:   zettadaten_fe_next17/components/FooterComponent.js 	modified:   zettadaten_fe_next17/components/Navigation.js 	modified:   zettadaten_fe_next17/package-lock.json 	modified:   zettadaten_fe_next17/package.json 	modified:   zettadaten_fe_next17/pages/index.js 	modified:   zettadaten_fe_next17/yarn.lock

--- a/zettadaten_fe_next17/package.json
+++ b/zettadaten_fe_next17/package.json
@@ -30,10 +30,12 @@
     "@types/react-dom": "latest",
     "autoprefixer": "latest",
     "axios": "latest",
+    "moment": "^2.29.4",
     "next": "12.2.5",
     "next-redux-wrapper": "^7.0.5",
+    "nouislider": "^15.6.1",
     "postcss": "latest",
-    "prop-types": "latest",
+    "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
