modified:   zettadaten_fe_next17/.babelrc 	modified:   zettadaten_fe_next17/package-lock.json 	modified:   zettadaten_fe_next17/package.json 	modified:   zettadaten_fe_next17/public/sitemap-0.xml 	modified:   zettadaten_fe_next17/yarn.lock

--- a/zettadaten_fe_next17/.babelrc
+++ b/zettadaten_fe_next17/.babelrc
@@ -1,10 +1,10 @@
-
 {
   "presets": [
     "next/babel",
     "@babel/preset-env"
   ],
   "plugins": [
-    "styled-components"
+    "styled-components",
+    "babel-plugin-macros"
   ]
 }
