--- a/zettadaten_fe_next17/package.json
+++ b/zettadaten_fe_next17/package.json
@@ -49,6 +49,7 @@
     "redux-thunk": "^2.4.1",
     "styled-components": "^5.3.5",
     "tailwindcss": "latest",
+    "twin.macro": "^2.8.2",
     "typescript": "^4.8.2",
     "web-vitals": "latest"
   },
@@ -58,6 +59,7 @@
     "eslint": "8.23.0",
     "eslint-config-next": "12.2.5"
   },
+  
   "resolutions": {
     "styled-components": "^5"
   },
@@ -74,5 +76,11 @@
   "publishConfig": {
     "registry": "https://npm.pkg.github.com"
   },
-  "homepage": "https://github.com/cadentic/strapi-webdev"
+  "homepage": "https://github.com/cadentic/strapi-webdev",
+  "babelMacros": {
+    "twin": {
+      "config": "./tailwind.config.js",
+      "preset": "styled-components"
+    }
+  }
 }
