--- a/zettadaten_fe_next17/package.json
+++ b/zettadaten_fe_next17/package.json
@@ -22,6 +22,7 @@
     "@mui/material": "latest",
     "@mui/x-data-grid": "^5.17.1",
     "@mui/x-date-pickers": "^5.0.0",
+    "@nextui-org/react": "^1.0.0-beta.10",
     "@testing-library/jest-dom": "latest",
     "@testing-library/react": "latest",
     "@testing-library/user-event": "latest",
@@ -59,7 +60,6 @@
     "eslint": "8.23.0",
     "eslint-config-next": "12.2.5"
   },
-  
   "resolutions": {
     "styled-components": "^5"
   },
