--- a/zettadaten_fe_next17/package.json
+++ b/zettadaten_fe_next17/package.json
@@ -44,6 +44,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
     "react-markdown": "^8.0.3",
+    "react-moment": "^1.1.2",
     "react-redux": "^8.0.2",
     "react-scripts": "^2.1.3",
     "redux": "^4.2.0",
