--- a/ZETTADATEN/package.json
+++ b/ZETTADATEN/package.json
@@ -18,7 +18,8 @@
     "@strapi/provider-upload-cloudinary": "^4.3.6",
     "@strapi/strapi": "4.3.6",
     "mysql": "2.18.1",
-    "strapi-plugin-graphs-builder": "^1.0.0"
+    "strapi-plugin-graphs-builder": "^1.0.0",
+    "strapi-plugin-import-export-entries": "^1.14.1"
   },
   "author": {
     "name": "A Strapi developer"
